# AIE6JIA-Midterm

./: README.md  astrology_101.json  cyberteller.ipynb  pyproject.toml
aimakerspace/: __init__.py  text_utils.py  vectordatabase.py
astrology/: __init__.py  chart.py  houses.py  transits.py
data/: 12 Astrological Houses – Astrology Lesson 4.html  Aspects and Orbs in Astrology – Lesson 9.html  Before Determining Compatibility – Individual Capacity to Relate.html  Compatibility in Love Relationships _ AstroLibrary.html  Elements Qualities Polarities – Astrology Lesson 7.html  Elements and Energy – Deeper into the 3 parts of Synastry.html  House Overlays – Deeper into the 3 parts of Synastry.html  How to Read Your Own Birth Chart – Astrology Lesson 10.html  Planets in Astrology – Lesson 5 _ AstroLibrary.html  Relationship Astrology – Introduction _ AstroLibrary.html  Synastry Art and Science- Synastry Aspects, Element Compatibility, House Overlays.html  Synastry Aspects – Deeper into the 3 parts of Synastry.html  What Are Transits In Astrology_ – Lesson 18.html  What is a Rising Sign_Ascendant – Astrology Lesson 6.html  Zodiac Signs – Astrology Lesson 8 _ AstroLibrary.html
